--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.5",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -23,10 +24,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-icons": "^5.5.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.15.3",
     "sass": "^1.56.1",
     "typescript": "4.9.3",
     "web3modal": "^1.9.10"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.17"
   }
 }
